--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v5
       - name: Install, build, and upload your site
         uses: withastro/action@v5
+      - name: Disable Jekyll on publish dir
+        run: echo > ./dist/.nojekyll
 
   deploy:
     environment:
