--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@nanostores/persistent": "^1.2.0",
     "astro": "^5.15.9",
     "nanostores": "^1.1.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.50.1"
   }
 }
