--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@nanostores/persistent": "^1.2.0",
-    "astro": "^5.15.9",
-    "nanostores": "^1.1.0"
+    "astro": "^5.15.9"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1"
