feat: add audio state management with local storage support
- Implemented AudioState type to manage audio playback state.
- Added functions to get, set, subscribe, and notify audio state changes.
- Introduced loadState and saveState functions for persisting audio state in local storage.
- Added clearState function to reset audio state.
- Enhanced skills radar and tooltips with type safety and improved event handling.
- Fixed TypeScript errors and improved type definitions across various scripts.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "astro": "^5.15.9"
+    "@astrojs/check": "^0.9.6",
+    "astro": "^5.15.9",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1"
